[tool.poetry]
name = "chatbot-gpt-gui"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"
packages = [{include = "chatbot_gpt_gui"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.0"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
